# py-cosine-similarity

./: CMakeLists.txt  README.md  setup.py
app/: bindings.cpp
yaml/: Dockerfile  bindings.cpp  buildconfig.yaml  comandos.txt  deployment.yaml  imagestream.yaml  main.py  requirements.txt  route.yaml  service.yaml
